# lite-rt-study

./: .gitignore  README.md  main.py  pyproject.toml
models/: mobilenet_v2_aiedge_int8.tflite  mobilenet_v2_c1.tflite  mobilenet_v2_c1_recipe.json  mobilenet_v2_c2.tflite  mobilenet_v2_c2_recipe.json  mobilenet_v2_c3_a.tflite  mobilenet_v2_c3_b.tflite  mobilenet_v2_c3_c.tflite  mobilenet_v2_c3_d.tflite  mobilenet_v2_c3_d_recipe.json  mobilenet_v2_c4.tflite  mobilenet_v2_c5.tflite  mobilenet_v2_c5_recipe.json  mobilenet_v2_legacy_int8.tflite
notebooks/: Quantization_Report.ipynb  report.ipynb
results/: android_benchmark_results.csv  experiment_results.csv
src/: __init__.py  benchmark.py  benchmark_adb.py  convert.py  convert_aiedge.py  convert_onnx.py  data_loader.py  inference.py  model_loader.py  run_experiments.py
