[project]
name = "lite-rt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ai-edge-litert>=2.1.0",
    "ai-edge-torch>=0.1.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "ml-dtypes>=0.5.0",
    "notebook>=7.5.2",
    "onnx>=1.19.0",
    "onnx-graphsurgeon>=0.5.8",
    "onnx2tf>=1.28.8",
    "onnxscript>=0.5.7",
    "onnxsim>=0.4.36",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "sng4onnx>=1.0.4",
    "tabulate>=0.9.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
